test/tests/stages/18_structures/invalid_types/incompatible_types/branch_mismatch_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[32]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(x)
  =
  {
  const int(1)
  }
  ;
  const int(1)
  ?
  identifier(x)
  :
  (
  void
  )
  const int(2)
  ;
  }
